lab5_without_sonar